# Choco.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md
include/cc/: any.h  application.h  array.h  bounds.h  canvas.h  channel.h  collection.h  color.h  context.h  data.h  defines.h  dictionary.h  dispatch_queue.h  drawable.h  error.h  events.h  file.h  file_channel.h  file_io.h  file_stream.h  flags.h  font.h  graphics.h  handle.h  image.h  image_batch.h  image_data.h  intptr.h  io.h  linked.h  linked_data.h  linked_list.h  list.h  local.h  models.h  numeric.h  object.h  pixels.h  pointer.h  rect.h  (+26 more)
include/cc/algorithm/: bezier_path.h
include/cc/io/: channel.h  file_channel.h  named_channel.h  tcp_channel.h  tcp_server_channel.h  udp_channel.h
include/cc/ui/: element.h
internal/cc/io/: socket.h
src/: CMakeLists.txt  application.cpp  canvas.cpp  channel.cpp  color.cpp  context.cpp  data.cpp  dispatch_queue.cpp  error.cpp  file_channel.cpp  file_io.cpp  flags.cpp  font.cpp  graphics.cpp  handle.cpp  image.cpp  image_batch.cpp  image_data.cpp  interanal.cpp  internal.h  intptr.cpp  main.cpp  pixels.cpp  pointer.cpp  rect.cpp  render.cpp  renderer.cpp  renderer_context.cpp  renderer_context.h  screen.cpp  string.cpp  texture.cpp  ui_context.cpp  ui_context.h  ui_element.cpp  ui_event.cpp  utils.cpp  var.cpp  vector2.cpp  vector3.cpp  (+7 more)
src/io/: CMakeLists.txt  file_channel.cpp  named_channel.cpp  socket.cpp  socket_mswin.cpp  socket_posix.cpp  tcp_channel.cpp  tcp_server_channel.cpp  udp_channel.cpp
test/: CMakeLists.txt  array.cpp  byte.cpp  common.cpp  file_channel.cpp  gui.cpp  image.cpp  list.cpp  local.cpp  slice.cpp  string.cpp  test_linked_list.cpp  test_vector.cpp  var.cpp  wasm.cpp  zone.cpp
